--- a/arch/arm/boot/dts/imx6qdl-edm2-cf-pmic.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-edm2-cf-pmic.dtsi
@@ -232,14 +232,14 @@
 
 	backlight_lvds1 {
 		compatible = "pwm-backlight";
-		pwms = <&pwm4 0 5000000>;
+		pwms = <&pwm4 0 50000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <7>;
 	};
 
 	backlight_lvds0 {
 		compatible = "pwm-backlight";
-		pwms = <&pwm3 0 5000000>;
+		pwms = <&pwm3 0 50000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <7>;
 	};
