--- a/arch/arm/boot/dts/imx6qdl-tek3.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-tek3.dtsi
@@ -247,7 +247,7 @@
 
 		led_d24 {
 			label = "led_d24";
-			pwms = <&pwm1 0 5000000>;
+			pwms = <&pwm1 0 50000>;
 			max-brightness = <255>;
 			linux,default-trigger = "default-on";
 		};
