--- a/arch/arm/boot/dts/imx6qdl-wandboard-revd1.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wandboard-revd1.dtsi
@@ -228,14 +228,14 @@
 
 	backlight_lcd {
 		compatible = "pwm-backlight";
-		pwms = <&pwm4 0 5000000>; /* LCD_BKLEN J1A-82 */
+		pwms = <&pwm4 0 50000>; /* LCD_BKLEN J1A-82 */
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <7>;
 	};
 
 	backlight_lvds {
 		compatible = "pwm-backlight";
-		pwms = <&pwm3 0 5000000>; /* LVDS_ABL_CTRL J1A-27 */
+		pwms = <&pwm3 0 50000>; /* LVDS_ABL_CTRL J1A-27 */
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <7>;
 	};
