--- a/arch/arm/boot/dts/imx6sx-edm1-cf.dtsi
+++ b/arch/arm/boot/dts/imx6sx-edm1-cf.dtsi
@@ -30,7 +30,7 @@
 
 	backlight1 {
 		compatible = "pwm-backlight";
-		pwms = <&pwm2 0 5000000>;
+		pwms = <&pwm2 0 50000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <6>;
 		fb-names = "mxs-lcdif0";
@@ -38,7 +38,7 @@
 	
 	backlight2 {
 		compatible = "pwm-backlight";
-		pwms = <&pwm3 0 5000000>;
+		pwms = <&pwm3 0 50000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <6>;
 		fb-names = "mxs-lcdif1";
