--- a/arch/arm/boot/dts/imx6ul-edm1-nand.dtsi
+++ b/arch/arm/boot/dts/imx6ul-edm1-nand.dtsi
@@ -66,7 +66,7 @@
 
         backlight_lvds {
                 compatible = "pwm-backlight";
-                pwms = <&pwm2 0 5000000>;
+                pwms = <&pwm2 0 50000>;
                 brightness-levels = <0 4 8 16 32 64 128 255>;
                 default-brightness-level = <6>;
                 status = "okay";
@@ -74,7 +74,7 @@
 
         backlight_lcd {
                 compatible = "pwm-backlight";
-                pwms = <&pwm4 0 5000000>;
+                pwms = <&pwm4 0 50000>;
                 brightness-levels = <0 4 8 16 32 64 128 255>;
                 default-brightness-level = <6>;
                 status = "okay";
