--- a/arch/arm/boot/dts/imx6ull-pico.dtsi
+++ b/arch/arm/boot/dts/imx6ull-pico.dtsi
@@ -85,7 +85,7 @@
 
 	backlight {
 		compatible = "pwm-backlight";
-		pwms = <&pwm3 0 5000000>;
+		pwms = <&pwm3 0 50000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <6>;
 		status = "okay";
