--- a/arch/arm/boot/dts/imx7d-edm1.dtsi
+++ b/arch/arm/boot/dts/imx7d-edm1.dtsi
@@ -53,7 +53,7 @@
 	backlight_lvds {
 		compatible = "pwm-backlight";
 		pinctrl-names = "default";
-		pwms = <&pwm1 0 5000000 0>;
+		pwms = <&pwm1 0 50000 0>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <6>;
 		status = "okay";
@@ -61,7 +61,7 @@
 
 	backlight_lcd {
 		compatible = "pwm-backlight";
-		pwms = <&pwm3 0 5000000>;
+		pwms = <&pwm3 0 50000>;
 		brightness-levels = <0 4 8 16 32 64 128 255>;
 		default-brightness-level = <6>;
 		status = "okay";
